--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,19 @@
 body {
+    background-color:#fcf8e8;
+}
+h1{
+    margin-top: 0;
+}
+.top-container {
+    background-color: #e4f9f5;
+}
+.middle-container{
+    background-color: red;
+    width: 200px;
+    height: 200px;
+}
+.bottom-container{
     background-color: blue;
+    width: 200px;
+    height: 200px;
 }
