--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,17 @@
 body {
     background-color:#fcf8e8;
+    margin:0;
+    text-align: center;
 }
 h1{
     margin-top: 0;
+    width:10%;
+    margin: 0 auto;
 }
 .top-container {
     background-color: #e4f9f5;
+    position: relative;
+    padding-top: 100px;
 }
 .middle-container{
     background-color: red;
@@ -19,4 +25,14 @@ h1{
 }
 .pro{
     text-decoration: underline;
+}
+.bottom-cloud{
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+.top-cloud{
+    position: absolute;
+    right: 300px;
+    top: 50px;
 }
