--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,11 +2,19 @@ body {
     background-color:#fcf8e8;
     margin:0;
     text-align: center;
+    font-family: 'Merriweather', serif;
 }
+
 h1{
     margin-top: 0;
-    width:10%;
     margin: 0 auto;
+    font-family: 'Sacramento', cursive;
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+}
+h3{
+    font-family: 'Montserrat', sans-serif;
 }
 .top-container {
     background-color: #e4f9f5;
