--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#fcf8e8;
+    background-color:#d5f0ff;
     margin:0;
     text-align: center;
     font-family: 'Merriweather', serif;
@@ -22,25 +22,21 @@ h3{
     padding-top: 100px;
 }
 .middle-container{
-    background-color: red;
-    width: 200px;
-    height: 200px;
+    
 }
 .bottom-container{
-    background-color: blue;
-    width: 200px;
-    height: 200px;
+
 }
 .pro{
     text-decoration: underline;
-}
-.bottom-cloud{
-    position: absolute;
-    left: 300px;
-    bottom: 300px;
 }
 .top-cloud{
     position: absolute;
     right: 300px;
     top: 50px;
+}
+.bottom-cloud{
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
 }
