--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,7 @@ h1{
     margin-top: 0;
     margin: 0 auto;
     font-family: 'Sacramento', cursive;
+    font-size: 90px;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
