--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,26 +1,31 @@
 body {
-    background-color:#d5f0ff;
+    background-color:#e4f9f5;
     margin:0;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
 
 h1{
-    margin-top: 0;
-    margin: 0 auto;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
-    font-size: 90px;
+    font-size: 5.625em;
+    color: #66bfbf;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66bfbf;
+    font-weight: normal;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
+    color: #11999e;
 }
 .top-container {
     background-color: #e4f9f5;
     position: relative;
     padding-top: 100px;
+    line-height: 2em;
 }
 .middle-container{
     
@@ -40,4 +45,10 @@ h3{
     position: absolute;
     left: 300px;
     bottom: 300px;
+}
+a:link{
+    color: #11999e;
+}
+a:visited{
+    color: rgb(190, 219, 252);
 }
