--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,3 +52,18 @@ a:link{
 a:visited{
     color: rgb(190, 219, 252);
 }
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+   
+}
+.DS{
+    float: left;
+    margin-right: 30px;
+}
+.mongo{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
